Flickering due to scroll bar in the plotting issue resolved Raster plot added

--- a/SiliFish/Resources/DyChartStyleSheet.css
+++ b/SiliFish/Resources/DyChartStyleSheet.css
@@ -140,13 +140,13 @@
 }
 
 .chart-container {
+    overflow: hidden !important;
     display: flex;
     flex-flow: row nowrap;
     overflow: hidden;
 }
 
 .chart {
-
     flex-grow: 1;
     display: flex;
     flex-direction: column;
